--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-intl": "^5.9.2"
+    "react-dom": "17.0.1"
   },
   "engines": {
     "node": ">=14.0.0",
